# inotify-tools

./: .gitignore  CMakeLists.txt  configure  inotify-tools-config.cmake
